objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SFDC_Kyogo__c</fullName>
        <label>競合先</label>
        <picklist>
            <picklistValues>
                <fullName>競合先A社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>競合先B社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>競合先C社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Push_Counter__c</fullName>
        <description>設定していた完了予定日を未来日付に変更するたびに数字が追加されます。
（同月の変更は追加されません。翌月以降にすると追加されます。）</description>
        <label>Push Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_ShouhaiGenin__c</fullName>
        <inlineHelpText>フェーズに連動。
成立、ロスト時に必須入力。</inlineHelpText>
        <label>勝敗原因</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>価格</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>営業力</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>提案ソリューション</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商品力</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_keikaNissuu__c</fullName>
        <description>本日から完了予定日をマイナスした日数。完了予定日からどれくらい経っているかを把握。</description>
        <formula>TODAY() - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>経過日数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__SF_NEW_CREATE_VISIT_FOR_OPP__c</fullName>
        <description>商談に紐付く新規行動登録画面へのリンク</description>
        <formula>HYPERLINK(&quot;https://ap.salesforce.com/00U/e?what_id=&quot;&amp; Id ,&quot;新規訪問登録&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新規訪問登録</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__SF_UPDATE_OPP__c</fullName>
        <description>商談更新のリンク</description>
        <formula>HYPERLINK(&quot;https://ap.salesforce.com/&quot;&amp; Id &amp;&quot;/e?retURL=&quot;,&quot;商談更新&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商談更新</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>商談パイプライン</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>